# bs2tokenizer

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  Makefile  README.md
.cache/clangd/index/: gmock-actions.h.12A6BFABBA17769C.idx  gmock-all.cc.4002E8E6FE786045.idx  gmock-cardinalities.cc.AF6B601B2E233919.idx  gmock-cardinalities.h.26B43B80CE7377B8.idx  gmock-function-mocker.h.CCF419975EE86843.idx  gmock-generated-actions.h.C01C732FC3654E92.idx  gmock-internal-utils.cc.494F695816C97E1F.idx  gmock-internal-utils.h.F79500E1E3DF6510.idx  gmock-matchers.cc.72C0B3EF968DEEEE.idx  gmock-matchers.h.478F408B79095C17.idx  gmock-matchers.h.864297E380B50026.idx  gmock-more-actions.h.D6C4758598600C4F.idx  gmock-more-matchers.h.9DE2E1733B443871.idx  gmock-nice-strict.h.3EE346E999FAEEA3.idx  gmock-port.h.56D86469D6F6E7F5.idx  gmock-port.h.7AD1467DDE4F961C.idx  gmock-pp.h.67C3CEE56340E40E.idx  gmock-spec-builders.cc.8B5DC28FCCABF766.idx  gmock-spec-builders.h.2594868D780111CC.idx  gmock.cc.019AF045D0913996.idx  gmock.h.30AB48323C3C820A.idx  gmock_main.cc.2E8890FFCAD2F6F5.idx  gtest-all.cc.90741908A1E70735.idx  gtest-assertion-result.cc.AB41DCC9197F7F58.idx  gtest-assertion-result.h.C0A11465E0709192.idx  gtest-death-test-internal.h.47F5120CB3782724.idx  (+36 more)
.github/workflows/: ci.yml
cmake/: external-lib.cmake  install-config.cmake  install-rules.cmake  sources.cmake  variables.cmake
include/tokenizer/: tokenizer.hpp  tokenizer_types.hpp
src/tokenizer/: tokenizer.cpp
test/: CMakeLists.txt
test/src/: tokenizer_test.cpp
